--- a/.github/workflows/PushImageToGitHub.yml
+++ b/.github/workflows/PushImageToGitHub.yml
@@ -20,4 +20,4 @@ jobs:
         with:
           context: DockerFileFolder/
           push: true
-          tags: rekhugopal/testrepo:latest
+          tags: swamikari/testrepo:latest
